add cloudconfig (cc, ig, bp) to swagger API
it is not used because swagger API only accepts HTTPS clients
